--- a/novaSala/novaSala.html
+++ b/novaSala/novaSala.html
@@ -10,5 +10,6 @@
                             <input type="submit" value="Criar sala" onclick="cadastroSalaBanco();"> <br><br>
                             <div id="nome"></div>
                             <div id="divResposta"></div>
+                            <a href="../homepage.html">Voltar</a>
                     </body>
                 </html>
